--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.ts"
+    "start": "nodemon ./src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^13.6.0",
+    "@discordjs/builders": "^0.13.0",
+    "@discordjs/rest": "^0.4.1",
+    "discord-rpc": "^4.0.1",
+    "discord.js": "^14.0.0-dev.1651493371-4ba0f56",
     "dotenv": "^16.0.0",
+    "express": "^4.18.1",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "@types/discord-rpc": "^4.0.2",
+    "@types/express": "^4.17.13"
   }
 }
